--- a/jsonx_test/jsonx_test.vcxproj.filters
+++ b/jsonx_test/jsonx_test.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="test_parser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="test_value.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\jsonx\jsonx.hpp">
