--- a/jsonx_test/jsonx_test.vcxproj
+++ b/jsonx_test/jsonx_test.vcxproj
@@ -190,6 +190,7 @@
   <ItemGroup>
     <ClCompile Include="testmain.cpp" />
     <ClCompile Include="test_parser.cpp" />
+    <ClCompile Include="test_value.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\jsonx\jsonx.hpp" />
